@@ -5,6 +5,7 @@ Changelog
 2019.1.3 (unreleased)
 ---------------------
 
+- Fix performance issue with search root exclusion in tabbed view listings. [lgraf]
 - Fix upgrade step that reindexes object_provides for PDFs so it performs better. [lgraf]
 
 
